force-app/main/default/objects/Konteyner__c/Konteyner__c.object-meta.xml
<CustomObject>
    <label>Konteyner</label>
    <nameField>
        <displayFormat>K-{0000}</displayFormat>
        <label>Konteyner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Konteynerler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>