force-app/main/default/objects/Konteyner__c/fields/Havayolu_Var__c.field-meta.xml
<CustomField>
    <fullName>Havayolu_Var__c</fullName>
    <label>Havayolu Varış</label>
    <length>30</length>
    <type>Text</type>
</CustomField>