force-app/main/default/objects/Konteyner__c/fields/Karayolu_Var__c.field-meta.xml
<CustomField>
    <fullName>Karayolu_Var__c</fullName>
    <label>Karayolu Varış</label>
    <length>30</length>
    <type>Text</type>
</CustomField>