force-app/main/default/objects/Konteyner__c/fields/Konteyner_k_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Konteyner_k_Tarihi__c</fullName>
    <label>Konteyner Çıkış Tarihi</label>
    <type>Date</type>
</CustomField>