force-app/main/default/objects/Konteyner__c/fields/Liman_ad__c.field-meta.xml
<CustomField>
    <fullName>Liman_ad__c</fullName>
    <label>Liman adı</label>
    <length>30</length>
    <type>Text</type>
</CustomField>