force-app/main/default/objects/Konteyner__c/fields/Plaka__c.field-meta.xml
<CustomField>
    <fullName>Plaka__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaka</label>
    <referenceTo>Plaka_Name__c</referenceTo>
    <relationshipLabel>Konteynerler</relationshipLabel>
    <relationshipName>Konteynerler</relationshipName>
    <type>Lookup</type>
</CustomField>