force-app/main/default/objects/Konteyner__c/recordTypes/Havayolu.recordType-meta.xml
<RecordType>
    <fullName>Havayolu</fullName>
    <active>true</active>
    <label>Havayolu</label>
</RecordType>