force-app/main/default/objects/Konteyner__c/recordTypes/Karayolu.recordType-meta.xml
<RecordType>
    <fullName>Karayolu</fullName>
    <active>true</active>
    <label>Karayolu</label>
</RecordType>